[package]
name = "obscurax"
version = "0.1.0"
edition = "2021"

[lib]
name = "obscurax"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38", features = ["serde"] }
# NOTE: Uses a local path fork with Element::node_id() accessor exposed.
# Upstream PR pending. Revert to git dep once merged:
#   obscura = { git = "https://github.com/h4ckf0r0day/obscura.git", rev = "b2e4bb49" }
obscura = { path = "../../../obscura-fork/crates/obscura" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
serde = "1"
serde_json = "1"

[features]
default = []

# REQUIRED: obscura's V8 anti-panic protocol needs panic=unwind.
[profile.release]
panic = "unwind"
