[package]
name = "obscurax"
version = "0.1.0"
edition = "2021"

[lib]
name = "obscurax"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38", features = ["serde"] }
# NOTE: Uses a local path fork with Element::node_id() accessor exposed.
# Upstream PR pending. Revert to git dep once merged:
# Pinned to the expose-node-id branch of gilbertwong96/obscura (a fork of h4ckf0r0day/obscura)
# that adds a public Element::node_id() accessor needed for element operations.
# Upstream PR pending; switch back to h4ckf0r0day/obscura once merged.
obscura = { git = "https://github.com/gilbertwong96/obscura.git", branch = "expose-node-id" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
serde = "1"
serde_json = "1"

[features]
default = []

# REQUIRED: obscura's V8 anti-panic protocol needs panic=unwind.
[profile.release]
panic = "unwind"
