[package]
name = "obscurax"
version = "0.1.0"
edition = "2021"

[lib]
name = "obscurax"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38", default-features = false, features = ["serde"] }
obscura = { git = "https://github.com/h4ckf0r0day/obscura.git", rev = "b2e4bb49" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
serde = "1"
serde_json = "1"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
nif_version_2_18 = ["rustler/nif_version_2_18"]

# REQUIRED: obscura's V8 anti-panic protocol needs panic=unwind.
[profile.release]
panic = "unwind"
